--- a/Consultas.ipynb
+++ b/Consultas.ipynb
@@ -2032,43 +2032,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "                     belongs_to_collection     budget  \\\n",
-      "17115  Pirates of the Caribbean Collection  380000000   \n",
-      "\n",
-      "                           genres    id original_language  \\\n",
-      "17115  Adventure, Action, Fantasy  1865                en   \n",
-      "\n",
-      "                                                overview  popularity  \\\n",
-      "17115  Captain Jack Sparrow crosses paths with a woma...        28.0   \n",
-      "\n",
-      "                                    production_companies  \\\n",
-      "17115  Walt Disney Pictures, Jerry Bruckheimer Films,...   \n",
-      "\n",
-      "           production_countries release_date     revenue  runtime  \\\n",
-      "17115  United States of America   2011-05-14  1045713802    136.0   \n",
-      "\n",
-      "       spoken_languages    status                      tagline  \\\n",
-      "17115  English, Español  Released  Live Forever Or Die Trying.   \n",
-      "\n",
-      "                                             title  vote_average  vote_count  \\\n",
-      "17115  Pirates of the Caribbean: On Stranger Tides           6.4        5068   \n",
-      "\n",
-      "       release_year    return  \n",
-      "17115          2011  2.751878  \n"
+      "17115    380000000\n",
+      "Name: budget, dtype: int64\n"
      ]
     }
    ],
    "source": [
     "pelicula_mayor_presupuesto = data[data['budget'] == data['budget'].max()]\n",
     "\n",
-    "print(pelicula_mayor_presupuesto)"
+    "dm= pelicula_mayor_presupuesto[\"budget\"]\n",
+    "\n",
+    "print(dm)"
    ]
   }
  ],
